--- a/grasa_event_locator/templates/resetPWForm.html
+++ b/grasa_event_locator/templates/resetPWForm.html
@@ -1,50 +1,182 @@
 {% include "header.html" %}
 
   <div class="form-changePW">
-	    {% if expired %}
-	     <div class="alert alert-warning" role="alert">
-          This password reset link has expired, please generate a new one <a href="/resetPW.html">here.</a>
-        </div>
-	  	{% endif %}
-        {% if pwdmatch %}
-        <div class="alert alert-warning" role="alert">
-          Please confirm that the inputted passwords match.
-        </div>
-        {% endif %}
-	<form method="post">
+		{% if expired %}
+		 <div class="alert alert-warning" role="alert">
+		  This password reset link has expired, please generate a new one <a href="/resetPW.html">here.</a>
+		</div>
+		{% endif %}
+		{% if pwdmatch %}
+		<div class="alert alert-warning" role="alert">
+		  Please confirm that the inputted passwords match.
+		</div>
+		{% endif %}
+      
 	{% csrf_token %}
 		{% if valid_string %}
-		<label for="currentPW">New Password</label>
-		<input type="password" id="currentPW" class="form-control" name="new" required autofocus>
-		</br>
-		<label for="newPW">Confirm Password</label>
-		<input type="password" id="newPW" class="form-control" name="confirm" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
-		<input type="checkbox" onclick="myFunction()"> &nbsp; Show Password
-		</br>
+      <h1 class="h3 mb-3 font-weight-normal text-center top-20">Reset Password</h1>
+	<form id="theForm" method="post" class="needs-validation" novalidate >
+        <div class="row">
+                <div class="col-sm-12">
+                    <div class="form-group col-md-12">
+                        <label for="newPW">New Password</label>
+                        <input type="password" id="newPW" class="form-control" name="new" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
+                        <div class="invalid-feedback">
+                          <p>Password must contain the following:</p>
+                            <ul>
+                              <li id="letter">A <b>lowercase</b> letter</li>
+                              <li id="capital">A <b>capital (uppercase)</b> letter</li>
+                              <li id="number">A <b>number</b></li>
+                              <li id="length">Minimum <b>8 characters</b></li>
+                            </ul>
+                        </div>
+                    </div>
 
+                    <div class="form-group col-md-12">
+                        <label for="confirmPW">Confirm New Password</label>
 
-	<!--Pop-up confirmation page after clicking submit button on Registration form-->
-	<div class="row">
-        <div class="col-12">
-            <button type="submit" class="btn btn-lg btn-primary btn-block">Submit</button>
+                        <input type="password" id="confirmPW" class="form-control" name="confirm" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required>
+                        <div class="invalid-feedback">
+                            Passwords must match.
+                        </div>
+                        <input id="SPcheckbox" type="checkbox" onclick="myFunction()">
+                        <label for="SPcheckbox">&nbsp; Show Password</label>
+                    </div>
+
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 registerBtnRow">
+                    <button type="submit" class="btn btn-lg btn-success btn-block top-20" id="submitBtn">Submit</button>
+                    <div class="text-center top-20">
+                        <p><a href="login.html">Return to Login</a></p>
+                    </div>
+                </div>
         </div>
-	</div>
+
 		{% endif %}
 	</form>
   </div>
 
 <script>
-function myFunction() {
-  var x = document.getElementById("currentPW");
-  var y = document.getElementById("newPW");
-  if (x.type === "password" || y.type === "password") {
-    x.type = "text";
-	y.type = "text";
-  } else {
-    x.type = "password";
-	y.type = "password";
-  }
-}
+	
+    //confirm password extra validation
+    $('#confirmPW').keyup(function() {
+      if ( document.getElementById("confirmPW").value != document.getElementById("myPW").value ) {
+          if(document.getElementById("theForm").classList.contains('was-validated')){
+              $('#confirmPW').removeClass( "is-invalid" );
+              $('#confirmPW').addClass( "is-valid" );
+              $('#confirmPW').css('border', 'solid 1px #28a745');
+          }
+      }
+    });
+
+
+	//password validation - Lei
+	function myFunction() {
+	  var x = document.getElementById("newPW");
+	  var y = document.getElementById("confirmPW");
+	  if (x.type === "password" || y.type === "password") {
+		x.type = "text";
+		y.type = "text";
+	  } else {
+		x.type = "password";
+		y.type = "password";
+	  }
+
+	}
+
+
+	//validation
+	(function() {
+	  'use strict';
+	  window.addEventListener('load', function() {
+		// Fetch all the forms we want to apply custom Bootstrap validation styles to
+		var forms = document.getElementsByClassName('needs-validation');
+		// Loop over them and prevent submission
+		var validation = Array.prototype.filter.call(forms, function(form) {
+		  form.addEventListener('submit', function(event) {
+			if ( document.getElementById("confirmPW").value != document.getElementById("newPW").value ) {
+				//if passwords don't match
+				event.preventDefault();
+				event.stopPropagation();
+				$('#confirmPW').addClass( "is-invalid" );
+				$('#confirmPW').css('border', 'solid 1px #dc3545')
+				$('#confirmPW').css('background-image', 'none');
+			}else if (form.checkValidity() === false) {
+				event.preventDefault();
+				event.stopPropagation();
+			}else{
+				 $('form').submit()
+			}
+			form.classList.add('was-validated');
+
+		  }, false);
+		});
+	  }, false);
+	})();
+
+
+	//password validation check mark
+	var myInput = document.getElementById("newPW");
+	var letter = document.getElementById("letter");
+	var capital = document.getElementById("capital");
+	var number = document.getElementById("number");
+	var length = document.getElementById("length");
+
+	// When the user clicks on the password field, show the message box
+	myInput.onfocus = function() {
+	  document.getElementById("message").style.display = "block";
+	}
+
+	// When the user clicks outside of the password field, hide the message box
+	myInput.onblur = function() {
+	  document.getElementById("message").style.display = "none";
+	}
+
+	// When the user starts to type something inside the password field
+	myInput.onkeyup = function() {
+	  // Validate lowercase letters
+	  var lowerCaseLetters = /[a-z]/g;
+	  if(myInput.value.match(lowerCaseLetters)) {
+		letter.classList.remove("invalid");
+		letter.classList.add("valid");
+	  } else {
+		letter.classList.remove("valid");
+		letter.classList.add("invalid");
+	  }
+
+	  // Validate capital letters
+	  var upperCaseLetters = /[A-Z]/g;
+	  if(myInput.value.match(upperCaseLetters)) {
+		capital.classList.remove("invalid");
+		capital.classList.add("valid");
+	  } else {
+		capital.classList.remove("valid");
+		capital.classList.add("invalid");
+	  }
+
+	  // Validate numbers
+	  var numbers = /[0-9]/g;
+	  if(myInput.value.match(numbers)) {
+		number.classList.remove("invalid");
+		number.classList.add("valid");
+	  } else {
+		number.classList.remove("valid");
+		number.classList.add("invalid");
+	  }
+
+	  // Validate length
+	  if(myInput.value.length >= 8) {
+		length.classList.remove("invalid");
+		length.classList.add("valid");
+	  } else {
+		length.classList.remove("valid");
+		length.classList.add("invalid");
+	  }
+	}
+
+
 </script>
 
 {% include "footer.html" %}
