--- a/grasa_event_locator/templates/allUsers.html
+++ b/grasa_event_locator/templates/allUsers.html
@@ -1,8 +1,21 @@
 {% include "header.html" %}
 <div class="row allUsersContainer">
+
     <div class="col-sm-12">
         <div class="twentyblock"></div>
         <h2 class="text-center">All Providers</h2>
+        {% if sent_invite %}
+            <div class="alert alert-warning" role="alert">
+                Invite sent!
+            </div>
+        {% endif %}
+
+        {% if invite_failure %}
+            <div class="alert alert-warning" role="alert">
+                The email address you've entered is invalid, please try again.
+            </div>
+        {% endif %}
+
         <button type="button" class="btn btn-info float-left" style="margin-bottom: 10px;" id="backBtn"> <i class="fa fa-chevron-left" aria-hidden="true" ></i> Back to Admin Portal</button>
         <button type="button" class="btn btn-primary float-right" id="addAdmin" data-toggle="modal" data-target="#inviteModal"><i class="fa fa-paper-plane" aria-hidden="true"></i> Invite Provider</button>
         <table class="table table-bordered">
@@ -22,7 +35,7 @@
 
                   <td><a href="mailto:{{ user.user }}">{{ user.user }}</a></td>
                   <td>
-                      <i class="fa fa-user fa-fw" aria-hidden="true"></i> {{         user.contact_name }}<br>
+                      <i class="fa fa-user fa-fw" aria-hidden="true"></i> {{ user.contact_name }}<br>
                       <i class="fa fa-envelope fa-fw" aria-hidden="true"></i> <a href="mailto:{{ pendingUser.contact_email }}">{{ user.contact_email }}</a><br>
                       <i class="fa fa-phone fa-fw" aria-hidden="true"></i> {{ user.contact_phone }}
 
@@ -43,14 +56,16 @@
                           <span aria-hidden="true">&times;</span>
                         </button>
                       </div>
-                      <div class="modal-body">
-                       Are you sure you want to delete this user? This cannot be undone.<br><br><b>THIS WILL REMOVE ALL EVENTS ASSOCIATED WITH THE USER</b>.
-                      </div>
-                      <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Never Mind</button>
-                        <button type="button" class="btn btn-danger" data-dismiss="modal" onclick="window.location.href='{% url 'deny_user' user.id %}'">Confirm Delete</button>
-
-                      </div>
+                        <form method="post" action="allUsers.html">{% csrf_token %}
+                          <div class="modal-body">
+                           Are you sure you want to delete this user? This cannot be undone.<br><br><b>THIS WILL REMOVE ALL EVENTS ASSOCIATED WITH THE USER</b>.
+                          </div>
+                          <div class="modal-footer">
+                              <input type="hidden" name="delete" value="{{ user.id }}" readonly>
+                              <button type="button" class="btn btn-secondary" data-dismiss="modal">Never Mind</button>
+                              <button type="submit" class="btn btn-danger" value="Submit">Confirm Delete</button>
+                          </div>
+                        </form>
                     </div>
                   </div>
                 </div>
