--- a/grasa_event_locator/templates/header.html
+++ b/grasa_event_locator/templates/header.html
@@ -40,7 +40,26 @@
         var groupList = ["Activity", "Transportation", "Grades Served", "Gender","Distance", "Fees", "Timing"]
 
         //Activity
-        var activityList = ["Academic Support", "Arts and Culture", "Career or College Readiness", "Civic Engagement", "Community Service / Service Learning", "Entrepreneurship / Leadership", "Financial Literacy", "Health & Wellness", "Media Technology",  "Mentoring", "Nature & the Environment", "Play", "Public Speaking", "Social and Emotional Learning (SEL)", "Sports and Recreation", "Science, Tech, Engineering, Math (STEM)", "Tutoring", "Other"]
+        var activityList = [
+            "Academic Support",
+            "Arts and Culture",
+            "Career or College Readiness",
+            "Civic Engagement",
+            "Community Service / Service Learning",
+            "Entrepreneurship / Leadership",
+            "Financial Literacy",
+            "Health and Wellness",
+            "Media Technology",
+            "Mentoring",
+            "Nature / Environment",
+            "Play",
+            "Public Speaking",
+            "Social and Emotional Learning (SEL)",
+            "Sports and Recreation",
+            "Science, Tech, Engineering, Math (STEM)",
+            "Tutoring",
+            "Other"
+        ]
 
         //Transportation
         //Refactored to match header and forms as well as fix duplicate search bug
