--- a/grasa_event_locator/templates/provider.html
+++ b/grasa_event_locator/templates/provider.html
@@ -186,7 +186,7 @@
             </button>
           </div>
               <form id="theForm" method="POST" action="provider.html" class="needs-validation" novalidate>{% csrf_token %}
-                  `<div class="modal-body">
+                  <div class="modal-body">
 
                     <div class="row">
                         <div class="col-sm-12">
