--- a/grasa_event_locator/templates/provider.html
+++ b/grasa_event_locator/templates/provider.html
@@ -154,14 +154,16 @@
                           <span aria-hidden="true">&times;</span>
                         </button>
                       </div>
-                      <div class="modal-body">
+                      <form method="post" action="provider.html">{% csrf_token %}
+                        <div class="modal-body">
                        Are you sure you want to delete this Event? This cannot be undone.
                       </div>
                       <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Never Mind</button>
-                        <button type="button" class="btn btn-danger" data-dismiss="modal" onclick="window.location.href='{% url 'deny_event' myEvent.id %}'">Confirm Delete</button>
-
+                          <button type="button" class="btn btn-secondary" data-dismiss="modal">Never Mind</button>
+                          <button type="submit" class="btn btn-danger" value="Submit">Confirm Delete</button>
+                          <input type="hidden" name="delete" value="{{ myEvent.id }}" readonly>
                       </div>
+                      </form>
                     </div>
                   </div>
                 </div>
