:sparkles: Use admin contact email in Alt. Contact modal (closes #222)
This commit closes #222.

This makes some changes to the back-end code to make sure that the
config file is passed into the context of the rendering engine. The
front-end now has the Expressions in place to parse the admin email
where it should be in the Alternative Contact "more info" modal.

Thanks @ldidonato for catching this.

Signed-off-by: Justin W. Flory <git@jwf.io>

--- a/grasa_event_locator/templates/provider.html
+++ b/grasa_event_locator/templates/provider.html
@@ -92,7 +92,7 @@
                                       </div>
                                       <div class="modal-body">
                                         <p>Alternative Contact Information is information for someone else in your organization. This will be used by the administrators in the event that the person who created the account is unreachable, so that the organization will still have access to their events. This information will not be shown with your events.</p>
-                                          <p>More Questions? Please contact us at <a href="mailto:johndoe@email.com">johndoe@email.com</a></p>
+                                          <p>More Questions? Please contact us at <a href="mailto:{{ config.admin_email }}">{{ config.admin_email }}</a>.</p>
                                       </div>
                                       <div class="modal-footer">
                                         <button type="button" class="btn btn-primary" data-dismiss="modal">Ok</button>
