Got generic formatting to work
Got generic formatting (new lines, tabs, extra spaces, whatever the shift enter soft newline is, etc.) to work and display properly on event page.

--- a/grasa_event_locator/templates/event.html
+++ b/grasa_event_locator/templates/event.html
@@ -10,7 +10,7 @@
                 <span class="badge badge-info card-title">{{ f }}</span>
             {% endfor %}
             </div>
-            <p class="text-break">{{ event.content }}</p>
+            <p class="text-break"><pre>{{ event.content }}</pre></p>
 
             <h4>Location:</h4>
             <p>
