--- a/grasa_event_locator/static/css/custom.css
+++ b/grasa_event_locator/static/css/custom.css
@@ -7,6 +7,13 @@ html {
 body{
     margin-bottom: 60px;
 }
+
+pre {
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  word-break: break-word!important;
+  overflow-wrap: break-word!important;
+}
+
 .twentyblock{
     height: 20px;
 }
